Minimum FPS desired is 60!
Also need to update splitscreen layout. Or at least make it an option for player to choose.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,26 +11,13 @@ MinimumiOSVersion=IOS_8
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/RangerGame")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/RangerGame")
 GameViewportClientClassName=/Script/RangerGame.ULocalMPViewportClient
+MinDesiredFrameRate=60.000000
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Dynamic/Levels/IntroMap.IntroMap
-LocalMapOptions=
-TransitionMap=None
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Game/Dynamic/Game/BP_RangerGameInstance.BP_RangerGameInstance_C
-GameDefaultMap=/Game/Dynamic/Levels/MainMenu.MainMenu
-ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Dynamic/Game/BP_RangerGameMode.BP_RangerGameMode_C
-GlobalDefaultServerGameMode=None
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -72,5 +59,19 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Dynamic/Levels/IntroMap.IntroMap
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Game/Dynamic/Game/BP_RangerGameInstance.BP_RangerGameInstance_C
+GameDefaultMap=/Game/Dynamic/Levels/MainMenu.MainMenu
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Dynamic/Game/BP_RangerGameMode.BP_RangerGameMode_C
+GlobalDefaultServerGameMode=None
 
 
